--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -13,6 +13,7 @@ jobs:
           node-version: 16
           cache: 'npm'
       # установка и тесты приложения ci-app
+      - run: npm ci
       - run: make test
       - run: make lint
       # SNYK анализ на уязвимости
